--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,10 @@
   color: #61dafb;
 }
 
+.Navigation {
+    padding: 0px;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
