--- a/src/components/Jeopardy/Jeopardy.css
+++ b/src/components/Jeopardy/Jeopardy.css
@@ -2,3 +2,11 @@
     width: 300px;
     margin-top: 5px;
 }
+
+.Jeopardy button {
+    width: 300px;
+}
+
+.Jeopardy button:hover {
+    cursor: pointer;
+}
